templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: event-gateway
  namespace: team3-ns
  annotations:
    # Provision a cloud load balancer for external traffic
    networking.istio.io/service-type: LoadBalancer
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
